--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -38,6 +38,9 @@
     <!-- Swipe to Delete Section -->
     <string name="swipe_to_delete_title">Activar Deslizar para Eliminar</string>
     
+    <!-- Swipe Incremental Threshold Section -->
+    <string name="swipe_incremental_threshold_title">Sensibilidad de la Barra de Deslizamiento</string>
+    
     <!-- Auto Show Keyboard Section -->
     <string name="auto_show_keyboard_title">Mostrar Automáticamente el Teclado</string>
     
@@ -133,6 +136,7 @@
     <string name="user_dict_add_button">Guardar palabra</string>
     <string name="user_dict_empty_state">Aún no se han guardado palabras de usuario.</string>
     <string name="user_dict_edit_title">Editar palabra</string>
+    <string name="user_dict_frequency_label">Usos: %1$d</string>
     
     <string name="auto_correct_keyboard_proximity_title">Clasificación por Proximidad de Teclado</string>
     <string name="auto_correct_keyboard_proximity_description">Filtrar errores de escritura improbables basados en la distancia de las teclas (QWERTY/AZERTY/QWERTZ)</string>
@@ -159,6 +163,9 @@
     <string name="sym_instructions_title">Instrucciones</string>
     <string name="sym_instructions_text">Toque cualquier tecla a continuación para cambiar su emoji. Los cambios se guardan automáticamente.</string>
     <string name="sym_reset_to_default">Restablecer Predeterminado</string>
+    <string name="sym_reset_confirm_title">Restablecer Predeterminado</string>
+    <string name="sym_reset_confirm_message">¿Está seguro de que desea restablecer todas las asignaciones SYM a los valores predeterminados? Esta acción no se puede deshacer.</string>
+    <string name="sym_reset_confirm_button">Restablecer</string>
     
     <!-- Emoji Picker Dialog -->
     <string name="emoji_picker_title">Seleccionar Emoji</string>
@@ -194,6 +201,7 @@
     <string name="about_github">GitHub</string>
     <string name="about_build_info">Pastiera IME - Palsoftware 2025</string>
     <string name="about_title">Acerca de</string>
+    <string name="about_credits_error">No se pueden cargar la información de créditos.</string>
     
     <!-- Launcher Shortcuts Section -->
     <string name="launcher_shortcuts_title">Accesos Rápidos del Lanzador</string>
@@ -214,6 +222,7 @@
     <!-- Launcher Shortcut Assignment Activity -->
     <string name="launcher_shortcut_assignment_title">Asignar aplicación a tecla</string>
     <string name="launcher_shortcut_assignment_key">Tecla %1$s</string>
+    <string name="launcher_shortcut_assignment_header">Acceso rápido</string>
     <string name="launcher_shortcut_assignment_search_placeholder">Buscar aplicaciones…</string>
     <string name="launcher_shortcut_assignment_search_description">Buscar</string>
     <string name="launcher_shortcut_assignment_close">Cerrar</string>
@@ -267,12 +276,16 @@
     
     <!-- Variation Customization -->
     <string name="variation_customize_title">Personalizar variaciones</string>
+    <string name="variation_instructions_title">Instrucciones</string>
+    <string name="variation_instructions_description">Toque una casilla de variación para seleccionar un carácter. Cada letra puede tener hasta 7 caracteres de variación.</string>
     <string name="variation_picker_title">Seleccionar variación para %1$s</string>
     <string name="variation_picker_clear">Limpiar (Vacío)</string>
     <string name="variation_reset_to_default">Restaurar predeterminado</string>
     <string name="variation_reset_confirm_title">Restaurar predeterminado</string>
     <string name="variation_reset_confirm_message">¿Está seguro de que desea restaurar todas las variaciones a los valores predeterminados? Esta acción no se puede deshacer.</string>
     <string name="variation_reset_confirm_button">Restaurar</string>
+    <string name="static_variation_input_label">Valor</string>
+    <string name="static_variation_input_hint">Deje vacío y guarde para eliminar el slot.</string>
     
     <!-- Static Variation Bar Mode -->
     <string name="static_variation_bar_mode_title">Barra de variaciones estática</string>
@@ -337,6 +350,7 @@
     <string name="nav_mode_action_select_all">SelTodo</string>
     <string name="nav_mode_action_expand_selection_left">←Sel</string>
     <string name="nav_mode_action_expand_selection_right">→Sel</string>
+    <string name="nav_mode_action_toggle_pastierina">Pastierina</string>
     <string name="nav_mode_keycode_up">↑</string>
     <string name="nav_mode_keycode_down">↓</string>
     <string name="nav_mode_keycode_left">←</string>
@@ -493,6 +507,9 @@
     <string name="trackpad_tutorial_complete">Entendido</string>
     <string name="trackpad_tutorial_next">Siguiente</string>
     <string name="trackpad_tutorial_previous">Anterior</string>
+
+    <!-- Trackpad Debug Accessibility Service -->
+    <string name="trackpad_debug_service_description">Muestra eventos del trackpad en un overlay pequeño para depuración</string>
     
     <!-- Status Bar Buttons Configuration -->
     <string name="status_bar_buttons_title">Botones de Barra</string>
@@ -515,25 +532,25 @@
     <string name="status_bar_button_symbols">Símbolos</string>
     <string name="status_bar_button_symbols_description">Teclado de símbolos</string>
     <string name="status_bar_buttons_reset">Restablecer</string>
-    <string name="layout_import_from_file">Import from file</string>
-    <string name="layout_download_from_cloud">Download from cloud repository</string>
-    <string name="online_layouts_title">Cloud layouts</string>
-    <string name="online_layouts_refresh">Refresh</string>
-    <string name="online_layouts_empty">No cloud layouts found.</string>
-    <string name="online_layouts_manifest_error">Failed to load layout list</string>
-    <string name="online_layouts_installed_badge">Installed</string>
-    <string name="online_layouts_size">Size: %1$s</string>
-    <string name="online_layouts_download">Download</string>
-    <string name="online_layouts_downloading">Downloading...</string>
+    <string name="layout_import_from_file">Importar desde archivo</string>
+    <string name="layout_download_from_cloud">Descargar desde repositorio</string>
+    <string name="online_layouts_title">Layouts en la nube</string>
+    <string name="online_layouts_refresh">Actualizar</string>
+    <string name="online_layouts_empty">No se encontraron layouts en la nube.</string>
+    <string name="online_layouts_manifest_error">No se pudo cargar la lista de layouts</string>
+    <string name="online_layouts_installed_badge">Instalado</string>
+    <string name="online_layouts_size">Tamaño: %1$s</string>
+    <string name="online_layouts_download">Descargar</string>
+    <string name="online_layouts_downloading">Descargando…</string>
     <string name="online_layouts_download_progress">%1$s / %2$s</string>
-    <string name="online_layouts_download_success">Downloaded %1$s</string>
-    <string name="online_layouts_download_network_error">Network error</string>
-    <string name="online_layouts_download_invalid_format">Invalid layout format</string>
-    <string name="online_layouts_download_hash_mismatch">Download verification failed</string>
-    <string name="online_layouts_download_failed">Download failed</string>
-    <string name="online_layouts_uninstall">Delete</string>
-    <string name="online_layouts_uninstall_confirm_title">Delete layout</string>
-    <string name="online_layouts_uninstall_confirm_message">Are you sure you want to delete %1$s? This action cannot be undone.</string>
-    <string name="online_layouts_uninstall_success">Deleted %1$s</string>
-    <string name="online_layouts_uninstall_failed">Failed to delete layout</string>
+    <string name="online_layouts_download_success">%1$s descargado</string>
+    <string name="online_layouts_download_network_error">Error de red</string>
+    <string name="online_layouts_download_invalid_format">Formato de layout inválido</string>
+    <string name="online_layouts_download_hash_mismatch">Verificación de descarga fallida</string>
+    <string name="online_layouts_download_failed">Descarga fallida</string>
+    <string name="online_layouts_uninstall">Eliminar</string>
+    <string name="online_layouts_uninstall_confirm_title">Eliminar layout</string>
+    <string name="online_layouts_uninstall_confirm_message">¿Está seguro de que desea eliminar %1$s? Esta acción no se puede deshacer.</string>
+    <string name="online_layouts_uninstall_success">%1$s eliminado</string>
+    <string name="online_layouts_uninstall_failed">Error al eliminar layout</string>
 </resources>
