--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -92,6 +92,7 @@
     <string name="user_dict_add_button">Сохранить слово</string>
     <string name="user_dict_empty_state">Пользовательские слова еще не сохранены.</string>
     <string name="user_dict_edit_title">Редактировать слово</string>
+    <string name="user_dict_frequency_label">Использований: %1$d</string>
     
     <string name="auto_correct_keyboard_proximity_title">Ранжирование по Близости Клавиатуры</string>
     <string name="auto_correct_keyboard_proximity_description">Фильтровать маловероятные опечатки на основе расстояния клавиш (QWERTY/AZERTY/QWERTZ)</string>
@@ -155,6 +156,7 @@
     <string name="keyboard_layout_viewer_open">Смотреть раскладку</string>
     <string name="keyboard_layout_settings_button">Настройки раскладки</string>
     <string name="about_title">О программе</string>
+    <string name="about_credits_error">Не удалось загрузить информацию о кредитах.</string>
     <string name="launcher_shortcuts_title">Горячие клавиши</string>
     <string name="launcher_shortcuts_experimental">Экспериментальные</string>
     <string name="launcher_shortcuts_description">Включить горячие клавиши</string>
@@ -169,6 +171,7 @@
     <string name="launcher_shortcuts_action_type">Действие: %1$s</string>
     <string name="launcher_shortcut_assignment_title">Назначить приложение на клавишу</string>
     <string name="launcher_shortcut_assignment_key">Клавиша %1$s</string>
+    <string name="launcher_shortcut_assignment_header">Горячая клавиша</string>
     <string name="launcher_shortcut_assignment_search_placeholder">Поиск приложений...</string>
     <string name="launcher_shortcut_assignment_search_description">Поиск</string>
     <string name="launcher_shortcut_assignment_close">Закрыть</string>
@@ -216,6 +219,20 @@
     <string name="unicode_category_arrows">Стрелки</string>
     <string name="unicode_category_misc">Другое</string>
     <string name="unicode_category_variations">Вариации</string>
+    
+    <!-- Variation Customization -->
+    <string name="variation_customize_title">Настроить вариации</string>
+    <string name="variation_instructions_title">Инструкция</string>
+    <string name="variation_instructions_description">Нажмите на поле вариации, чтобы выбрать символ. Каждая буква может иметь до 7 символов вариаций.</string>
+    <string name="variation_picker_title">Выбрать вариацию для %1$s</string>
+    <string name="variation_picker_clear">Очистить (Пусто)</string>
+    <string name="variation_reset_to_default">Сбросить по умолчанию</string>
+    <string name="variation_reset_confirm_title">Сбросить по умолчанию</string>
+    <string name="variation_reset_confirm_message">Вы уверены, что хотите сбросить все вариации к значениям по умолчанию? Это действие нельзя отменить.</string>
+    <string name="variation_reset_confirm_button">Сбросить</string>
+    <string name="static_variation_input_label">Значение</string>
+    <string name="static_variation_input_hint">Оставьте пустым и сохраните, чтобы удалить слот.</string>
+    
     <string name="sym_tab_emoji">Эмодзи</string>
     <string name="sym_tab_characters">Символы</string>
     <string name="app_picker_title">Выбрать приложение</string>
@@ -264,6 +281,7 @@
     <string name="nav_mode_action_select_all">Выд.Все</string>
     <string name="nav_mode_action_expand_selection_left">←Выб</string>
     <string name="nav_mode_action_expand_selection_right">→Выб</string>
+    <string name="nav_mode_action_toggle_pastierina">Pastierina</string>
 
     <string name="pastierina_mode_title">Режим Pastierina</string>
     <string name="pastierina_mode_description">Переключить минимальный интерфейс</string>
@@ -377,6 +395,9 @@
     <string name="trackpad_tutorial_complete">Понятно</string>
     <string name="trackpad_tutorial_next">Далее</string>
     <string name="trackpad_tutorial_previous">Назад</string>
+
+    <!-- Trackpad Debug Accessibility Service -->
+    <string name="trackpad_debug_service_description">Отображает события тачпада в небольшом overlay для отладки</string>
     
     <!-- Status Bar Buttons Configuration -->
     <string name="status_bar_buttons_title">Кнопки Панели</string>
@@ -399,26 +420,26 @@
     <string name="status_bar_button_symbols">Символы</string>
     <string name="status_bar_button_symbols_description">Клавиатура символов</string>
     <string name="status_bar_buttons_reset">Сброс</string>
-    <string name="layout_import_from_file">Import from file</string>
-    <string name="layout_download_from_cloud">Download from cloud repository</string>
-    <string name="online_layouts_title">Cloud layouts</string>
-    <string name="online_layouts_refresh">Refresh</string>
-    <string name="online_layouts_empty">No cloud layouts found.</string>
-    <string name="online_layouts_manifest_error">Failed to load layout list</string>
-    <string name="online_layouts_installed_badge">Installed</string>
-    <string name="online_layouts_size">Size: %1$s</string>
-    <string name="online_layouts_download">Download</string>
-    <string name="online_layouts_downloading">Downloading...</string>
+    <string name="layout_import_from_file">Импортировать из файла</string>
+    <string name="layout_download_from_cloud">Скачать из репозитория</string>
+    <string name="online_layouts_title">Облачные раскладки</string>
+    <string name="online_layouts_refresh">Обновить</string>
+    <string name="online_layouts_empty">Облачные раскладки не найдены.</string>
+    <string name="online_layouts_manifest_error">Не удалось загрузить список раскладок</string>
+    <string name="online_layouts_installed_badge">Установлено</string>
+    <string name="online_layouts_size">Размер: %1$s</string>
+    <string name="online_layouts_download">Скачать</string>
+    <string name="online_layouts_downloading">Скачивание…</string>
     <string name="online_layouts_download_progress">%1$s / %2$s</string>
-    <string name="online_layouts_download_success">Downloaded %1$s</string>
-    <string name="online_layouts_download_network_error">Network error</string>
-    <string name="online_layouts_download_invalid_format">Invalid layout format</string>
-    <string name="online_layouts_download_hash_mismatch">Download verification failed</string>
-    <string name="online_layouts_download_failed">Download failed</string>
-    <string name="online_layouts_uninstall">Delete</string>
-    <string name="online_layouts_uninstall_confirm_title">Delete layout</string>
-    <string name="online_layouts_uninstall_confirm_message">Are you sure you want to delete %1$s? This action cannot be undone.</string>
-    <string name="online_layouts_uninstall_success">Deleted %1$s</string>
-    <string name="online_layouts_uninstall_failed">Failed to delete layout</string>
+    <string name="online_layouts_download_success">Скачано %1$s</string>
+    <string name="online_layouts_download_network_error">Ошибка сети</string>
+    <string name="online_layouts_download_invalid_format">Неверный формат раскладки</string>
+    <string name="online_layouts_download_hash_mismatch">Проверка скачивания не удалась</string>
+    <string name="online_layouts_download_failed">Скачивание не удалось</string>
+    <string name="online_layouts_uninstall">Удалить</string>
+    <string name="online_layouts_uninstall_confirm_title">Удалить раскладку</string>
+    <string name="online_layouts_uninstall_confirm_message">Вы уверены, что хотите удалить %1$s? Это действие нельзя отменить.</string>
+    <string name="online_layouts_uninstall_success">Удалено %1$s</string>
+    <string name="online_layouts_uninstall_failed">Не удалось удалить раскладку</string>
 </resources>
 
